tests/invalid/str_lt_wrong_type/main.py
def run_case() -> None:
    s: str = "hello"
    out: bool = s.__lt__(42)


if __name__ == "__main__":
    run_case()
